manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: aoc-website-service
  name: aoc-website-service
  namespace: aoc-website
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    io.kompose.service: aoc-website-deployment
status:
  loadBalancer: {}
